--- a/hugo.toml
+++ b/hugo.toml
@@ -50,6 +50,75 @@ theme = "FeelIt"
       # FeelIt DELETED | 0.2.0 replaced with hiddenFromHomePage in params.page
       # default behavior when you don't set "hiddenFromHomePage" in front matter
       defaultHiddenFromHomePage = false
+  [params.social]
+    GitHub = ""
+    Linkedin = ""
+    Twitter = "anddevel"
+    Instagram = "anddevelo"
+    Facebook = ""
+    Telegram = ""
+    Medium = ""
+    Gitlab = ""
+    Youtubelegacy = ""
+    Youtubecustom = ""
+    Youtubechannel = ""
+    Tumblr = ""
+    Quora = ""
+    Keybase = ""
+    Pinterest = ""
+    Reddit = ""
+    Codepen = ""
+    FreeCodeCamp = ""
+    Bitbucket = ""
+    Stackoverflow = ""
+    Weibo = ""
+    Odnoklassniki = ""
+    VK = ""
+    Flickr = ""
+    Xing = ""
+    Snapchat = ""
+    Soundcloud = ""
+    Spotify = ""
+    Bandcamp = ""
+    Paypal = ""
+    Fivehundredpx = ""
+    Mix = ""
+    Goodreads = ""
+    Lastfm = ""
+    Foursquare = ""
+    Hackernews = ""
+    Kickstarter = ""
+    Patreon = ""
+    Steam = "anddevel"
+    Twitch = "anddevel"
+    Strava = ""
+    Skype = ""
+    Whatsapp = ""
+    Zhihu = ""
+    Douban = ""
+    Angellist = ""
+    Slidershare = ""
+    Jsfiddle = ""
+    Deviantart = ""
+    Behance = ""
+    Dribbble = ""
+    Wordpress = ""
+    Vine = ""
+    Googlescholar = ""
+    Researchgate = ""
+    Mastodon = ""
+    Thingiverse = ""
+    Devto = ""
+    Gitea = ""
+    XMPP = ""
+    Matrix = ""
+    Bilibili = ""
+    Email = "taylen@anddevel.com"
+    Resume = ""
+    xda = ""
+    kaggle = ""
+    discord = ""
+    RSS = true #
 
 [menu]
   [[menu.main]]
@@ -79,6 +148,14 @@ theme = "FeelIt"
     url = "/categories/"
     title = ""
     weight = 3
+  [params.page.comment.utterances]
+    enable = false
+    # owner/repo
+    repo = "anddevel/anddevel"
+    issueTerm = "pathname"
+    label = ""
+    lightTheme = "github-light"
+    darkTheme = "github-dark"
 
 # Markup related configuration in Hugo
 [markup]
