Updated discord link, potentialy addressed coments

--- a/hugo.toml
+++ b/hugo.toml
@@ -117,7 +117,7 @@ theme = "FeelIt"
     Resume = ""
     xda = ""
     kaggle = ""
-    discord = ""
+    discord = "anddevel"
     RSS = true #
 
 [menu]
